--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3001"
   },
   "dependencies": {
+    "@sentry/nextjs": "6.3.3",
+    "@sentry/tracing": "6.3.3",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1"
