--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start -p 3001"
   },
   "dependencies": {
-    "@sentry/nextjs": "https://gitpkg.now.sh/getsentry/sentry-javascript/packages/nextjs?kmclb-vercel-dependency-test&scripts.gitpkg=yarn%20%26%26%20yarn%20build%20%26%26%20echo%20%22DONE%20BUILDING%20%40SENTRY%2FNEXTJS%2",
+    "@sentry/nextjs": "https://gitpkg.now.sh/getsentry/sentry-javascript/packages/nextjs?kmclb-vercel-dependency-test&scripts.postinstall=yarn%20%26%26%20yarn%20build%20%26%26%20echo%20%22DONE%20BUILDING%20%40SENTRY%2FNEXTJS%22",
     "next": "10.x",
     "react": "17.0.1",
     "react-dom": "17.0.1"
