--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start -p 3001"
   },
   "dependencies": {
-    "@sentry/nextjs": "https://gitpkg.now.sh/getsentry/sentry-javascript/packages/nextjs?kmclb-vercel-dependency-test",
+    "@sentry/nextjs": "@sentry/nextjs@6.5.0-beta.1",
     "next": "10.x",
     "react": "17.0.1",
     "react-dom": "17.0.1"
