add bundleAnalyzer and make debugger use Sentry sourcemaps

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -66,7 +66,8 @@
       "resolveSourceMapLocations": [
         "${workspaceFolder}/**",
         "!**/node_modules/**",
-        "${workspaceFolder}/node_modules/next/dist/**"
+        "${workspaceFolder}/node_modules/next/dist/**",
+        "${workspaceFolder}/node_modules/@sentry/*/dist/**"
       ],
       "internalConsoleOptions": "openOnSessionStart"
     }
