--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@sentry/nextjs": "6.5.0-beta.1",
-    "next": "10.2.0",
+    "next": "10.x",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "^10.2.3"
   }
 }
