--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@sentry/nextjs": "6.5.0-beta.1",
     "next": "10.2",
+    "pig-latin": "^2.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
