--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "start": "next start -p 3001"
   },
   "dependencies": {
-    "@sentry/nextjs": "6.5.0-beta.1",
-    "next": "10.2",
+    "@sentry/nextjs": "6.x",
+    "next": "10.x",
     "pig-latin": "^2.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^10.2.3"
+    "@next/bundle-analyzer": "^10.2.3",
+    "@vercel/node": "^1.11.0",
+    "vercel": "^23.0.0"
   }
 }
