--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^10.2.3",
+    "@types/react": "^17.0.14",
     "@vercel/node": "^1.11.0",
+    "typescript": "^4.3.5",
     "vercel": "^23.0.0"
   }
 }
