--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "@sentry/nextjs": "6.x",
-    "next": "11.x",
+    "next": "11.0.1",
     "pig-latin": "^2.0.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "^17.x",
+    "react-dom": "^17.x"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^10.2.3",
