--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@sentry/nextjs": "6.x",
-    "next": "11.0.1",
+    "next": "11.x",
     "pig-latin": "^2.0.2",
     "react": "^17.x",
     "react-dom": "^17.x"
