--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
-    "build": "next build --debug",
-    "start": "next start -p 3001"
+    "build": "rm -rf .next && next build --debug",
+    "start": "next start -p 3001",
+    "clean": "rm -rf .next && rm -rf node_modules && yarn",
+    "sdk:reset": "yarn clean && yarn sdk:sync",
+    "sdk:setup": "source $HOME/.zshenv && source $ZDOTDIR/zsh_helpers/linkjs.sh && linkjs && linkplugin && mv node_modules/@sentry/ node_modules/@sentry-linked/ && yarn sdk:sync",
+    "sdk:sync": "source $HOME/.zshenv && source $ZDOTDIR/zsh_helpers/linkjs.sh && syncjs"
   },
   "dependencies": {
-    "@sentry/nextjs": "6.x",
+    "@sentry/nextjs": "7.0.0-alpha.1",
     "@sentry/wizard": "^1.2.13",
-    "next": "11.x",
+    "next": "12.x",
     "pig-latin": "^2.0.2",
     "react": "^17.x",
     "react-dom": "^17.x"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^10.2.3",
-    "@types/react": "^17.0.14",
+    "@types/react": "^17.0.3",
+    "@types/webpack": "^5.28.0",
     "@vercel/node": "^1.11.0",
     "typescript": "^4.3.5",
     "vercel": "^23.0.0"
