--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "sdk:sync": "source $HOME/.zshenv && source $ZDOTDIR/zsh_helpers/linkjs.sh && syncjs"
   },
   "dependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "@sentry/nextjs": "7.0.0-alpha.1",
     "@sentry/wizard": "^1.2.13",
-    "next": "12.x",
+    "babel-loader": "^8.2.5",
+    "next": "12.1.0",
     "pig-latin": "^2.0.2",
     "react": "^17.x",
     "react-dom": "^17.x"
