--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "sdk:sync": "source $HOME/.zshenv && source $ZDOTDIR/zsh_helpers/linkjs.sh && syncjs"
   },
   "dependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/plugin-syntax-jsx": "^7.18.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-sucrase": "^4.0.4",
     "@sentry/nextjs": "7.0.0-alpha.1",
     "@sentry/wizard": "^1.2.13",
-    "babel-loader": "^8.2.5",
-    "next": "12.1.0",
+    "next": "12.x",
     "pig-latin": "^2.0.2",
     "react": "^17.x",
-    "react-dom": "^17.x"
+    "react-dom": "^17.x",
+    "rollup": "^2.77.2",
+    "sucrase": "^3.25.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^10.2.3",
